--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #0f15cd;
     color: white;
     padding: 1em;
     text-align: center;
@@ -35,7 +35,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #45a049;
+    background-color: #0f15cd;
     border-radius: 5px;
 }
 
@@ -52,7 +52,7 @@ section {
 }
 
 footer {
-    background-color: #4CAF50;
+    background-color: #0f15cd;
     color: white;
     text-align: center;
     padding: 10px 0;
